--- a/tex/2024/3/7.tex
+++ b/tex/2024/3/7.tex
@@ -1,2 +1,129 @@
 \Question{\currfilebase}
-\WorkInProgress
+\begin{enumerate}
+    \item For the left inequality, \(f(n) > 0\) since \(f(n) > \frac{1}{n + 1} > 0\).
+
+          For the right inequality, we notice that
+          \begin{align*}
+              f(n) & = \frac{1}{n + 1} + \frac{1}{(n + 1) (n + 2)} + \frac{1}{(n + 1) (n + 2) (n + 3)} + \cdots \\
+                   & < \frac{1}{n + 1} + \frac{1}{(n + 1)^2} + \frac{1}{(n + 1)^3} + \cdots                     \\
+                   & = \frac{1}{n + 1} \cdot \frac{1}{1 - \frac{1}{n + 1}}                                      \\
+                   & = \frac{1}{(n + 1) - 1}                                                                    \\
+                   & = \frac{1}{n}.
+          \end{align*}
+
+          Hence,
+          \[
+              0 < f(n) < \frac{1}{n}.
+          \]
+
+    \item For the left inequality, by grouping consecutive terms, we have
+          \begin{align*}
+              g(n) & = \frac{1}{n + 1} - \frac{1}{(n + 1) (n + 2)}                                                                     \\
+                   & \phantom{=} + \frac{1}{(n + 1) (n + 2) (n + 3)} - \frac{1}{(n + 1) (n + 2) (n + 3) (n + 4)} + \cdots              \\
+                   & = \left(\frac{1}{n + 1} - \frac{1}{(n + 1) (n + 2)}\right)                                                        \\
+                   & \phantom{=} + \left(\frac{1}{(n + 1) (n + 2) (n + 3)} - \frac{1}{(n + 1) (n + 2) (n + 3) (n + 4)}\right) + \cdots \\
+                   & > \left(\frac{1}{n - 1} - \frac{1}{n + 1}\right)                                                                  \\
+                   & \phantom{=} + \left(\frac{1}{(n + 1) (n + 2) (n + 3)} - \frac{1}{(n + 1) (n + 2) (n + 3)}\right) + \cdots         \\
+                   & = 0 + 0 + \cdots                                                                                                  \\
+                   & = 0,
+          \end{align*}
+          using the inequality
+          \[
+              \frac{1}{(n + 1) \cdots (n + k)} > \frac{1}{(n + 1) \cdots (n + k) (n + k + 1)}.
+          \]
+
+          For the right inequality, by grouping consecutive after the first one, we have
+          \begin{align*}
+              g(n) & = \frac{1}{n + 1} - \frac{1}{(n + 1) (n + 2)} + \frac{1}{(n + 1) (n + 2) (n + 3)}                                                 \\
+                   & \phantom{=} - \frac{1}{(n + 1) (n + 2) (n + 3) (n + 4)} + \frac{1}{(n + 1) (n + 2) (n + 3) (n + 4) (n + 5)} - \cdots              \\
+                   & = \frac{1}{n + 1} - \left(\frac{1}{(n + 1) (n + 2)} - \frac{1}{(n + 1) (n + 2) (n + 3)}\right)                                    \\
+                   & \phantom{=} - \left(\frac{1}{(n + 1) (n + 2) (n + 3) (n + 4)} - \frac{1}{(n + 1) (n + 2) (n + 3) (n + 4) (n + 5)}\right) - \cdots \\
+                   & < \frac{1}{n + 1} - \left(\frac{1}{(n + 1) (n + 2)} - \frac{1}{(n + 1) (n + 2)}\right)                                            \\
+                   & \phantom{=} - \left(\frac{1}{(n + 1) (n + 2) (n + 3) (n + 4)} - \frac{1}{(n + 1) (n + 2) (n + 3) (n + 4)}\right) - \cdots         \\
+                   & = \frac{1}{n + 1} - 0 - 0 - \cdots                                                                                                \\
+                   & = \frac{1}{n + 1},
+          \end{align*}
+          using the inequality
+          \[
+              \frac{1}{(n + 1) \cdots (n + k - 1) (n + k)} < \frac{1}{(n + 1) \cdots (n + k - 1)}.
+          \]
+
+          Hence,
+          \[
+              0 < g(n) < \frac{1}{n + 1}.
+          \]
+
+    \item The infinite series for \(e\) is given by
+          \[
+              e = \sum_{t = 0}^{\infty} \frac{1}{t!},
+          \]
+          and notice that
+          \[
+              f(n) = \sum_{t = 1}^{\infty} \frac{n!}{(n + t)!} = n! \sum_{t = 1}^{\infty} \frac{1}{(n + t)!}.
+          \]
+
+          Hence,
+          \begin{align*}
+              (2n)! e - f(2n) & = (2n)! \sum_{t = 0}^{\infty} \frac{1}{t!} - (2n)! \sum_{t = 1}^{\infty} \frac{1}{(2n + t)!}      \\
+                              & = (2n)! \left(\sum_{t = 0}^{\infty} \frac{1}{t!} - \sum_{t = 2n + 1}^{\infty} \frac{1}{t!}\right) \\
+                              & = (2n)! \sum_{t = 0}^{2n} \frac{1}{t!}                                                            \\
+                              & = \sum_{t = 0}^{2n} \frac{(2n)!}{t!}.
+          \end{align*}
+
+          Since \(t \leq 2n\), the terms in the sum represents the number of ways to arrange \((2n - t)\) items out of \(2n\) items, which must be integers. Hence, the sum is an integer as well.
+
+          Similarly, the infinite series for \(e^{-1}\) is given by
+          \[
+              e^{-1} = \sum_{t = 0}^{\infty} \frac{(-1)^t}{t!},
+          \]
+          and notice that
+          \[
+              g(n) = - \sum_{t = 1}^{\infty} \frac{(-1)^t n!}{(n + t)!} = - n! \sum_{t = 1}^{\infty} \frac{(-1)^t}{(n + t)!}.
+          \]
+
+          Hence,
+          \begin{align*}
+              \frac{(2n)!}{e} + g(2n) & = (2n)! \sum_{t = 0}^{\infty} \frac{(-1)^t}{t!} - (2n)! \sum_{t = 1}^{\infty} \frac{(-1)^t}{(n + t)!}       \\
+                                      & = (2n)! \left(\sum_{t = 0}^{\infty} \frac{(-1)^t}{t!} - \sum_{t = 2n + 1}^{\infty} \frac{(-1)^t}{t!}\right) \\
+                                      & = (2n)! \sum_{t = 0}^{2n} \frac{(-1)^t}{t!}                                                                 \\
+                                      & = \sum_{t = 0}^{2n} \frac{(-1)^t (2n)!}{t!},
+          \end{align*}
+          and by the same argument, since \(t \leq 2n\), this must be an integer as well.
+
+    \item By the previous part, let \(a(n) = f(2n) - (2n)!e\), and \(b(n) = g(2n) + \frac{(2n)!}{e}\), we must have that \(a, b: \NN \to \ZZ\) since they are integers.
+
+          Using this notation,
+          \begin{align*}
+              q f(2n) + p g(2n) & = q a(2n) + qe (2n)! + p b(2n) - \frac{p}{e} (2n)!        \\
+                                & = q a(2n) + p b(2n) + \left(qe - \frac{p}{e}\right) (2n)! \\
+                                & = q a(2n) + p b(2n)
+          \end{align*}
+          must be an integer, since \(p, q, a(2n), b(2n)\) are all integers.
+
+    \item Assume B.W.O.C. that \(e^2\) is irrational. Then there exists natural numbers \(p, q\) such that
+          \[
+              e^2 = \frac{p}{q} \iff qe = \frac{p}{e}.
+          \]
+
+          Since \(e^2 > 1\), \(p > q\).
+
+          On one hand, we have \(q f(2n) + p g(2n) > 0\).
+
+          On the other hand, let \(n = p\),
+          \begin{align*}
+              q f(2n) + p g(2n) & < q \cdot \frac{1}{2p} + p \cdot \frac{1}{2p + 1} \\
+                                & < q \cdot \frac{1}{2p} + p \cdot \frac{1}{2p}     \\
+                                & = \frac{p + q}{2p}                                \\
+                                & < \frac{2p}{2p}                                   \\
+                                & = 1.
+          \end{align*}
+
+          This means
+          \[
+              0 < q f(2p) + p g(2p) < 1.
+          \]
+
+          But by the previous part, \(q f(2n) + p g(2n)\) is an integer for all positive integer \(n\), and \(n = p\) is a positive integer. This leads to a contradiction.
+
+          Hence, such \(p\) and \(q\) does not exist, meaning \(e^2\) is not rational, hence \(e^2\) is irrational.
+\end{enumerate}
