update command definitions.

--- a/macros.tex
+++ b/macros.tex
@@ -90,6 +90,7 @@
 
 % Other Functions
 \DeclareMathOperator{\sgn}{sgn}
+\DeclareMathOperator{\tr}{tr}
 
 % Other Math Symbols
 \DeclareMathOperator{\modulo}{mod}
