--- a/tex/2024/3/8.tex
+++ b/tex/2024/3/8.tex
@@ -1,2 +1,75 @@
 \Question{\currfilebase}
-\WorkInProgress
+
+\begin{enumerate}
+    \item \((y - x + 3) (y + x - 5) = 0\) if and only if \(y - x + 3 = 0\), or \(y + x - 5 = 0\). In the first case, \(y = x - 3\), representing a straight line with gradient \(1\), and in the second case, \(y = -x + 5\), representing a straight line with gradient \(-1\).
+
+          The equation represents a pair of straight lines with gradients \(1\) and \(-1\) if and only if it could be factorised into the form \((y - x + a) (y + x - b)\).
+
+          \begin{align*}
+              (y - x + a) (y + x + b) & = y^2 + xy + by - xy - x^2 - bx + ay + ax + ab \\
+                                      & = y^2 - x^2 + (a + b) y + (a - b) x + ab,
+          \end{align*}
+          and \(p = a + b, q = a - b, r = ab\).
+
+          On one hand, if it could be factorised into this form, we have
+          \[
+              p^2 - q^2 = (a + b)^2 - (a - b)^2 = a^2 + 2ab + b^2 - a^2 + 2ab - b^2 = 4ab = 4r.
+          \]
+
+          On the other hand, let \(a = \frac{p + q}{2}\), \(b = \frac{p - q}{2}\), and we have
+          \[
+              a + b = p, a - b = q, ab = \frac{p + q}{2} \frac{p - q}{2} = \frac{p^2 - q^2}{4} = \frac{4r}{4} = r.
+          \]
+
+          This shows that this is a necessary and sufficient condition, which finishes our proof.
+
+    \item Since the point \((x, y)\) lies on \(C_1\), we must have \(y = x^2\), and \(y - x^2 = 0\).
+
+          Since it lies on \(C_2\), we must have \(x = y^2 + 2sy + s (s + 1)\), and \(y^2 + 2sy + s (s + 1) - x\).
+
+          Hence,
+          \begin{align*}
+              \LHS & = y^2 + 2sy + s (s + 1) - x + k (y - x^2) \\
+                   & = 0 + k \cdot 0                           \\
+                   & = 0                                       \\
+                   & = \RHS
+          \end{align*}
+          for any real number \(k\).
+
+          Let \(k = 1\), by rearranging, we have
+          \[
+              y^2 - x^2 + (2s + 1) y - x + s (s + 1) = 0.
+          \]
+
+          We notice that
+          \begin{align*}
+              (2s + 1)^2 - (-1)^2 & = 4s^2 + 4s + 1 - 1 \\
+                                  & = 4s^2 + 4s         \\
+                                  & = 4 s (s + 1),
+          \end{align*}
+          which means that this represents a pair of straight lines with gradients \(1\) and \(-1\). The four points of intersection must lie on them.
+
+    \item By part (ii), we have \(a = \frac{(2s + 1) - 1}{2} = s\), and \(b = \frac{(2s + 1) - (-1)}{2} = s + 1\). This means
+          \[
+              (y - x + s) (y + x + s + 1) = 0,
+          \]
+          and the lines are \(y = x - s\) and \(y = -x - s - 1\).
+
+          Since a straight line may at most meet a polynomial twice, we must have \(y = x - s\) meets \(y = x^2\) at two distinct point, and \(y = -x - s - 1\) meets \(y = x^2\) at two distinct points as well.
+
+          \(x^2 = x - s \iff x^2 - x + s = 0\), and hence \(1 - 4s > 0\), which shows that \(s < \frac{1}{4}\).
+
+          \(x^2 - -x - s - 1 \iff x^2 + x + (s + 1) = 0\), and hence \(1 - 4(s + 1) > 0\), which shows that \(s < - \frac{3}{4}\).
+
+          Hence, \(s < - \frac{3}{4}\).
+
+    \item The lines are \(y = x - s\) and \(y = -x - s - 1\). Since \(s < - \frac{3}{4}\), both lines intersect \(y = x^2\) on precisely two points, since the discriminant for the quadratic is positive. Hence, we just have to show that none of those four points are the same.
+
+          This could only be the case of the intersection of the intersection of the two lines, which is \(\left(-\frac{1}{2}, - \frac{2s + 1}{2}\right)\). This lies on \(y = x^2\) if and only if
+          \[
+              - \frac{2s + 1}{2} = \left(- \frac{1}{2}\right)^2 \iff -s - \frac{1}{2} = \frac{1}{4} \iff s =- \frac{3}{4}
+          \]
+          which is not the case here.
+
+          Hence, \(C_1\) and \(C_2\) must intersect at four distinct points.
+\end{enumerate}
