--- a/tex/2024/3/4.tex
+++ b/tex/2024/3/4.tex
@@ -1,2 +1,91 @@
 \Question{\currfilebase}
-\WorkInProgress
+
+\begin{enumerate}
+    \item The angle between a line with gradient \(m\) and the positive \(x\)-axis is \(\arctan m\). Hence, we must have
+          \begin{align*}
+              \arctan m_1 - \arctan m_2                   & = \pm \frac{\pi}{4}                   \\
+              \tan \left(\arctan m_1 - \arctan m_2\right) & = \tan \left(\pm \frac{\pi}{4}\right) \\
+              \frac{m_1 - m_2}{1 + m_1 m_2}               & = \pm 1,
+          \end{align*}
+          as desired.
+
+    \item We have \(y = \frac{x^2}{4a}\), and hence \(\DiffFrac{y}{x} = \frac{x}{2a}\). Hence, the tangent to the point \(\left(p, \frac{p^2}{4a}\right)\) is given by
+          \begin{align*}
+              y - \frac{p^2}{4a} & = \frac{p}{2a} \left(x - p\right) \\
+              4ay - p^2          & = 2p (x - p)                      \\
+              4ay                & = 2px - p^2,
+          \end{align*}
+          with gradient \(\frac{2p}{4a} = \frac{p}{2a}\), and the tangent to the point \(\left(q, \frac{q^2}{4a}\right)\) is given by \(4ay = 2qx + q^2\), with gradient \(\frac{q}{2a}\).
+
+          Hence, when they intersect, it must be the case that
+          \begin{align*}
+              2px - p^2   & = 2qx - q^2       \\
+              2 (p - q) x & = p^2 - q^2       \\
+              2 (p - q) x & = (p + q) (p - q) \\
+              x           & = \frac{p + q}{2}
+          \end{align*}
+          since \(p \neq q\).
+
+          The \(y\)-coordinate is given by
+          \begin{align*}
+              y & = \frac{2px - p^2}{4a}      \\
+                & = \frac{p^2 + pq - p^2}{4a} \\
+                & = \frac{pq}{4a}.
+          \end{align*}
+
+          If the two curves meet at \(\frac{\pi}{4}\), the gradients must satisfy that
+          \begin{align*}
+              \frac{\frac{p}{2a} - \frac{q}{2a}}{1 + \frac{p}{2a} \cdot \frac{q}{2a}} & = \pm 1                       \\
+              \frac{2a (p - q)}{4a^2 + pq}                                            & = \pm 1                       \\
+              2a (p - q)                                                              & = \pm \left(4a^2 + pq\right)  \\
+              4a^2 (p - q)^2                                                          & = (4a^2 + pq)^2               \\
+              4a^2 p^2 - 8 a^2 pq + 4 a^2 q^2                                         & = 16 a^4 + 8 a^2 pq + p^2 q^2 \\
+              p^2 q^2 + 16 a^2 pq + 16 a^4 - 4 a^2 p^2 - 4 a^2 q^2                    & = 0.
+          \end{align*}
+
+          For the intersection of the two tangents, we consider \((y + 3a)^2 - (8a^2 + x^2)\).
+
+          \begin{align*}
+              (y + 3a)^2 - (8a^2 + x^2) & = y^2 + 6ay + 9a^2 - 8a^2 - x^2                                                         \\
+                                        & = y^2 + 6ay - x^2 + a^2                                                                 \\
+                                        & = \frac{p^2 q^2}{16a^2} + 6a \cdot \frac{pq}{4a} - \left(\frac{p + q}{2}\right)^2 + a^2 \\
+                                        & = \frac{p^2 q^2}{16a^2} + \frac{3pq}{2} - \frac{(p + q)^2}{4} + a^2.
+          \end{align*}
+
+          We have the following being equivalent:
+          \begin{align*}
+              (y + 3a)^2                                                         & = 8a^2 + x^2 \\
+              \frac{p^2 q^2}{16 a^2} + \frac{3pq}{2} - \frac{(p + q)^2}{4} + a^2 & = 0          \\
+              p^2 q^2 + 3pq \cdot 8a^2 - (p + q)^2 \cdot 4a^2 + a^2 \cdot 16 a^2 & = 0          \\
+              p^2 q^2 + 24 pq a^2 - 4 a^2 p^2 - 4 a^2 q^2 - 8 pq a^2 + 16 a^4    & = 0          \\
+              p^2 q^2 + 16 a^2 pq + 16 a^4 - 4 a^2 p^2 - 4 a^2 q^2               & = 0,
+          \end{align*}
+          which was true due to the tangents intersecting at \(\frac{\pi}{4}\).
+
+          Hence, we must have the intersection of two tangents lie on \((y + 3a)^2 = 8a^2 + x^2\), which finishes our proof.
+
+    \item Let \(\theta\) be this acute angle, and from the previous part, we can see that
+          \begin{align*}
+              4a^2 (p - q)^2                                                            & = \tan^2 \theta (4a^2 + pq)^2                                          \\
+              4a^2 p^2 - 8 a^2 pq + 4 a^2 q^2                                           & = \tan^2 \theta 16a^4 + \tan^2 \theta 8 a^2 pq + \tan^2 \theta p^2 q^2 \\
+              \tan^2\theta p^2 q^2 + 8(\tan^2 \theta + 1) a^2 pq + \tan^2 \theta 16 a^4 & = 4a^2 p^2 + 4 a^2 q^2
+          \end{align*}
+
+          Given \((y + 7a)^2 = 48 a^2 +3x^2\) for the intersection of the two tangents, we have
+          \begin{align*}
+              (y + 7a)^2 - \left(48 a^2 +3x^2\right)                                                                                  & = 0  \\
+              \left(\frac{pq}{4a} + 7a\right)^2 - \left(48 a^2 + 3 \left(\frac{p + q}{2}\right)^2\right)                              & = 0  \\
+              \frac{p^2 q^2}{16 a^2} + \frac{7pq}{2} + 49 a^2 - 48a^2 - \frac{3 (p + q)^2}{4}                                         & = 0  \\
+              p^2 q^2 + 8 a^2 \cdot 7pq + 16 a^4 - 3 (p + q)^2 \cdot 4 a^2                                                            & = 0  \\
+              p^2 q^2 + 56 pq a^2 + 16 a^4 - 12 p^2 a^2 - 12 q^2 a^2 - 24 pq a^2                                                      & = 0  \\
+              p^2 q^2 + 32 pq a^2 + 16 a^4 - 12 p^2 a^2 - 12 q^2 a^2                                                                  & = 0  \\
+              p^2 q^2 + 32 pq a^2 + 16 a^4 - 3 \left(\tan^2\theta p^2 q^2 + 8(\tan^2 \theta + 1) a^2 pq + 16 \tan^2 \theta a^4\right) & = 0  \\
+              (1 - 3 \tan^2 \theta) p^2 q^2 + 8 (1 - 3 \tan^2 \theta) pq a^2 + 16 (1 - 3 \tan^2 \theta) a^4                           & = 0  \\
+              (1 - 3 \tan^2 \theta) \left[p^2 q^2 + 8 pq a^2 + 16 a^4\right]                                                          & = 0  \\
+              (1 - 3 \tan^2 \theta) (pq + 4a^2)^2                                                                                     & = 0.
+          \end{align*}
+
+          Hence, either \(pq + 4a^2 = 0\), or \(1 - 3 \tan^2 \theta = 0\). The former cannot always the case. Therefore, \(1 - 3 \tan^2 \theta = 0\), which gives \(\tan \theta = \pm \frac{\sqrt{3}}{3}\).
+
+          Since \(\theta\) is acute, we have \(\tan \theta = \frac{\sqrt{3}}{3}\), and hence \(\theta = \frac{\pi}{6}\) is the acute angle between the two tangents.
+\end{enumerate}
